# spellchecker

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  fabfile.py  requirements.txt
spellchecker/: server.py  spellchecker.py  word_list.py
spellchecker/words/: pt_BR.list
src/: main.rs
tests/: execution.py  test_spellchecker.py  test_word_list.py
