[package]

name = "spellchecker"
authors = ["Diego Rubin <rubin.diego@gmail.com>"]
license = "MIT"
version = "0.0.1"
description = "A spellchecker built with rust."
repository = "https://github.com/diegorubin/spellchecker"
keywords = ["iron", "web", "spellchecker"]

[dependencies]
iron = "*"
router = "*"

